syntax = "proto3";
option go_package ="/grpcs/shipping_user";

message ShippingAddressResponse {
    string firstname = 1;
    string lastname  = 2;
    string city      = 3;
    string address1  = 4;
    string address2  = 5;
    uint32 countryid = 6;
    uint32 postcode  = 7;
}

message ShippingAddressAddRequest {
    string firstname = 1;
    string lastname  = 2;
    string city      = 3;
    string address1  = 4;
    string address2  = 5;
    uint32 countryid = 6;
    uint32 postcode  = 7;
}

message ShippingAddressUpdateRequest {
    string shippingAddressID = 1;
    string firstname = 2;
    string lastname  = 3;
    string city      = 4;
    string address1  = 5;
    string address2  = 6;
    uint32 countryid = 7;
    uint32 postcode  = 8;
}

message ShippingAddressAddResponse {
    string shippingAddressID = 1;
}

message ShippingAddressDeleteResponse {
    bool confirm = 1;
}

message ShippingAddressUpdateResponse {
    bool confirm = 1;
}

message ShippingAddressRequest {
    string shippingAddressID = 1;
}


service Shipping {
    rpc AddShippingAddress (ShippingAddressAddRequest) returns (ShippingAddressAddResponse);
    rpc GetShippingAddress (ShippingAddressRequest) returns (ShippingAddressResponse);
    rpc DeleteShippingAddress (ShippingAddressRequest) returns (ShippingAddressDeleteResponse);
    rpc UpdateShippingAddress (ShippingAddressUpdateRequest) returns (ShippingAddressUpdateResponse);
}